# openterm

./: .env.example  .gitignore  Cartman BBT.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  Procfile  minimal_app.py  nixpacks.toml  pyproject.toml  railway.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_derived_facts.py
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  base.py  fred.py  news.py  sec_edgar.py  stooq.py  yahoo.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: analytics.py  filings.py  fundamentals.py  health.py  instruments.py  macro.py  news.py  portfolio.py  prices.py  screener.py  (+1 more)
backend/app/core/: __init__.py  config.py  database.py  errors.py  redis.py  resilience.py
backend/app/models/: __init__.py  filing.py  fundamentals.py  instrument.py  macro.py  portfolio.py  price.py  screener.py  watchlist.py
backend/app/schemas/: __init__.py  analytics.py  common.py  filing.py  fundamentals.py  instrument.py  macro.py  news.py  portfolio.py  price.py  screener.py  watchlist.py
backend/app/services/: __init__.py  analytics_service.py  filing_service.py  fundamentals_service.py  instrument_service.py  macro_service.py  news_service.py  portfolio_service.py  price_service.py  screener_service.py  watchlist_service.py
backend/app/websocket/: __init__.py  manager.py  router.py  streamer.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py
backend/tests/contract/: test_adapters.py
backend/tests/unit/: test_parser.py
(+84 files in other folders)
